# AdventOfCode2025

./: Cargo.toml
.cargo/: config.toml
day1/src/: main.rs
