[workspace]
members = ["packages/aoc_utils", "packages/aoc_2025_1", "packages/aoc_2025_2", "packages/aoc_2025_3"]
resolver = "3"

[workspace.dependencies]
reqwest = "0.12.25"
anyhow = "1.0.100"
clap = "4.3.7"
tempfile = "3.10.0"
serde = "1.0.188"
toml = "0.9.8"
# tokio = { version = "1.0", features = ["full"] }
